--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-date-pagination",
-  "version": "1.0.0",
-  "description": "react-date-pagination",
+  "version": "1.0.2",
+  "description": "react date pagination",
   "author": "ShahriarSayeed",
   "license": "MIT",
   "repository": "ShahriarSayeed/react-date-pagination",
@@ -56,5 +56,10 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "classnames": "^2.2.6",
+    "moment": "^2.22.2",
+    "paginator": "^1.0.0"
+  }
 }
